# Secure-Agent-Launcher

./: .gitignore  AGENTS.md  README.ja.md  README.md  TODO.md  pyproject.toml
.github/workflows/: check.yml  release-macos.yml
Formula/: secure-agent-locker.rb
agent_locker/: audit.py  cli.py  config.py  gui.py  gui_data.py  gui_geometry.py  launch_command.py  policy.py  runner.py
scripts/: install-from-github.sh  install.sh  uninstall.sh
tests/: test_audit.py  test_cli.py  test_gui_logic.py  test_launch_command.py  test_policy.py  test_runner.py  test_runner_additional.py
