[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-agent-locker"
version = "0.1.0"
description = "Secure Agent Launcher: safety-first launcher for AI agent CLIs on macOS"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[project.scripts]
secure-agent-locker = "agent_locker.cli:main"

[tool.setuptools.packages.find]
include = ["agent_locker*"]
